--- a/paper/Permutations.tex
+++ b/paper/Permutations.tex
@@ -55,11 +55,11 @@ typing context must be suitably rearranged. Such rearrangement is in fact a
 \emph{permutation} of the elements of $\Context$.
 
 We define typing context permutations inductively, as a binary relation
-\AgdaDatatype{\_\#\_}:
+\AgdaDatatype{\_↭\_}:
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}\#\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}↭\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Context}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -69,16 +69,16 @@ We define typing context permutations inductively, as a binary relation
 \AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{\#refl}%
+\>[2]\AgdaInductiveConstructor{refl}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \\
 %
-\>[2]\AgdaInductiveConstructor{\#here}%
+\>[2]\AgdaInductiveConstructor{swap}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -89,7 +89,7 @@ We define typing context permutations inductively, as a binary relation
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
@@ -97,140 +97,139 @@ We define typing context permutations inductively, as a binary relation
 \AgdaBound{Γ}\AgdaSymbol{)}\<%
 \\
 %
-\>[2]\AgdaInductiveConstructor{\#next}%
+\>[2]\AgdaInductiveConstructor{prep}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{)}\<%
 \\
 %
-\>[2]\AgdaInductiveConstructor{\#tran}%
+\>[2]\AgdaInductiveConstructor{trans}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{Θ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Θ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Θ}\<%
 \end{code}
 
 This definition is essentially the same as the notion of list permutation in
 Agda's standard library. Each constructor represents a particular kind of
-permutation: \AgdaInductiveConstructor{\#refl} for the trivial permutation that
-does not change anything; \AgdaInductiveConstructor{\#here} for the permutation
+permutation: \AgdaInductiveConstructor{refl} for the trivial permutation that
+does not change anything; \AgdaInductiveConstructor{swap} for the permutation
 that swaps the first two elements of a typing context;
-\AgdaInductiveConstructor{\#next} for the permutation that applies a
+\AgdaInductiveConstructor{prep} for the permutation that applies a
 sub-permutation to the tail of a typing context;
-\AgdaInductiveConstructor{\#tran} for the sequential composition of
-permutations.
+\AgdaInductiveConstructor{trans} for the sequential composition of permutations.
 %
 We have preferred defining our own notion of permutation for simplicity: the
-\AgdaInductiveConstructor{\#here} constructor does not need a sub-permutation
-for the tail of the typing context, which can always be performed, if needed,
-using \AgdaInductiveConstructor{\#next} and \AgdaInductiveConstructor{\#tran}.
-Also, and more importantly, this definition is \emph{monomorphic} (it does not
-need to operate on lists of arbitrary type), resulting in a more streamlined
-usage in the rest of the code.
+\AgdaInductiveConstructor{swap} constructor does not need a sub-permutation for
+the tail of the typing context, which can always be performed, if needed, using
+\AgdaInductiveConstructor{prep} and \AgdaInductiveConstructor{trans}. Also, and
+more importantly, this definition is \emph{monomorphic} (it does not need to
+operate on lists of arbitrary type), resulting in a more streamlined usage in
+the rest of the code.
 
 \begin{code}[hide]%
-\>[0]\AgdaFunction{\#sym}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭sym}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \\
-\>[0]\AgdaFunction{\#sym}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭sym}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#sym}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭sym}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\<%
+\AgdaInductiveConstructor{swap}\<%
 \\
-\>[0]\AgdaFunction{\#sym}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭sym}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#sym}\AgdaSpace{}%
+\AgdaInductiveConstructor{prep}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭sym}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#sym}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭sym}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#sym}\AgdaSpace{}%
+\AgdaInductiveConstructor{trans}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭sym}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#sym}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭sym}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#empty-inv}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭empty-inv}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaInductiveConstructor{[]}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaInductiveConstructor{[]}\<%
 \\
-\>[0]\AgdaFunction{\#empty-inv}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭empty-inv}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#empty-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭empty-inv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{rewrite}\AgdaSpace{}%
-\AgdaFunction{\#empty-inv}\AgdaSpace{}%
+\AgdaFunction{↭empty-inv}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaFunction{\#empty-inv}\AgdaSpace{}%
+\AgdaFunction{↭empty-inv}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭solo-inv}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -238,7 +237,7 @@ usage in the rest of the code.
 \AgdaOperator{\AgdaFunction{[}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -247,45 +246,36 @@ usage in the rest of the code.
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\<%
 \\
-\>[0]\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{Γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭solo-inv}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{Γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭solo-inv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{rewrite}\AgdaSpace{}%
-\AgdaFunction{\#empty-inv}\AgdaSpace{}%
+\AgdaFunction{↭empty-inv}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{Γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭solo-inv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{rewrite}\AgdaSpace{}%
-\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
+\AgdaFunction{↭solo-inv}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
+\AgdaFunction{↭solo-inv}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#rot}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭rot}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -299,7 +289,7 @@ usage in the rest of the code.
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{C}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
@@ -308,15 +298,15 @@ usage in the rest of the code.
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#rot}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭rot}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\<%
+\AgdaInductiveConstructor{trans}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\<%
 \end{code}
 
-Just like permutations from Agda's standard library, also \AgdaDatatype{\_\#\_}
+Just like permutations from Agda's standard library, also \AgdaDatatype{\_↭\_}
 enjoys a number of expected (and useful) properties, such as symmetry. Among all
 properties, in the following we will make use of a specific one that connects
 context splitting and permutations: if $\Splitting\ContextC\ContextD\ContextE$,
@@ -325,7 +315,7 @@ $\ContextE$.\Luca{Ci sono molte altre proprietà non descritte, controllare
 quelle che servono davvero.}
 
 \begin{code}[hide]%
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
@@ -333,7 +323,7 @@ quelle che servono davvero.}
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -355,15 +345,15 @@ quelle che servono davvero.}
 \AgdaBound{Δ₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ₂}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
@@ -372,17 +362,17 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{\#split}\AgdaSpace{}%
+\AgdaFunction{↭split}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{p}\<%
 \\
@@ -407,18 +397,18 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{π₂}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{\#split}\AgdaSpace{}%
+\AgdaFunction{↭split}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{p}\<%
 \\
@@ -445,11 +435,11 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{π₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π₂}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
@@ -462,12 +452,12 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
@@ -480,12 +470,12 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
@@ -498,12 +488,12 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
@@ -516,17 +506,17 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\<%
+\AgdaInductiveConstructor{swap}\<%
 \\
-\>[0]\AgdaFunction{\#split}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭split}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{\#split}\AgdaSpace{}%
+\AgdaFunction{↭split}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{p}\<%
 \\
@@ -542,7 +532,7 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{π₂}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{\#split}\AgdaSpace{}%
+\AgdaFunction{↭split}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSpace{}%
 \AgdaBound{p′}\<%
 \\
@@ -564,17 +554,17 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π₁}\AgdaSpace{}%
 \AgdaBound{π₁′}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π₂}\AgdaSpace{}%
 \AgdaBound{π₂′}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#one+}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭solo}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -582,7 +572,7 @@ quelle che servono davvero.}
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -601,14 +591,14 @@ quelle che servono davvero.}
 \AgdaBound{Δ′}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
 \AgdaBound{Γ′}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ′}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#one+}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭solo}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{\#split}\AgdaSpace{}%
+\AgdaFunction{↭split}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{p}\<%
 \\
@@ -624,7 +614,7 @@ quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{π₂}\AgdaSpace{}%
 \AgdaKeyword{rewrite}\AgdaSpace{}%
-\AgdaFunction{\#singleton-inv}\AgdaSpace{}%
+\AgdaFunction{↭solo-inv}\AgdaSpace{}%
 \AgdaBound{π₁}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
@@ -635,7 +625,7 @@ quelle che servono davvero.}
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#shift}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭shift}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -646,33 +636,33 @@ quelle che servono davvero.}
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#shift}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭shift}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{[]}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#shift}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭shift}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaFunction{\#shift}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\<%
+\AgdaInductiveConstructor{trans}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
+\AgdaFunction{↭shift}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
@@ -687,54 +677,54 @@ quelle che servono davvero.}
 \AgdaSymbol{(}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \end{code}
 \begin{code}[hide]%
-\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaInductiveConstructor{•}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
+\AgdaInductiveConstructor{refl}\<%
 \\
-\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#append}\AgdaSpace{}%
+\AgdaInductiveConstructor{prep}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
-\AgdaFunction{\#shift}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#append}\AgdaSpace{}%
+\AgdaInductiveConstructor{trans}\AgdaSpace{}%
+\AgdaFunction{↭shift}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{))}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#left}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭left}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{Θ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{Θ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{Θ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#left}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭left}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{Θ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{[]}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -742,27 +732,27 @@ quelle che servono davvero.}
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{π}\<%
 \\
-\>[0]\AgdaFunction{\#left}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭left}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{Θ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Θ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#left}\AgdaSpace{}%
+\AgdaInductiveConstructor{prep}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭left}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#un}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭un}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↭}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Un}\AgdaSpace{}%
@@ -771,25 +761,25 @@ quelle che servono davvero.}
 \AgdaDatatype{Un}\AgdaSpace{}%
 \AgdaBound{Δ}\<%
 \\
-\>[0]\AgdaFunction{\#un}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭un}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{un}\<%
 \\
-\>[0]\AgdaFunction{\#un}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭un}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{prep}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#un}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭un}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#un}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭un}\AgdaSpace{}%
+\AgdaInductiveConstructor{swap}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSymbol{))}\AgdaSpace{}%
@@ -798,71 +788,15 @@ quelle che servono davvero.}
 \AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{\#un}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
+\>[0]\AgdaFunction{↭un}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{trans}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{\#un}\AgdaSpace{}%
+\AgdaFunction{↭un}\AgdaSpace{}%
 \AgdaBound{π′}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#un}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭un}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Un}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Un}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Un}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
-\\
-\>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaInductiveConstructor{•}\AgdaSpace{}%
-\AgdaInductiveConstructor{un-[]}\AgdaSpace{}%
-\AgdaInductiveConstructor{un-[]}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{un-[]}\<%
-\\
-\>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
-\AgdaBound{un₁}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{un₂}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{un₁}\AgdaSpace{}%
-\AgdaBound{un₂}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{un₁}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
-\AgdaBound{un₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{un₁}\AgdaSpace{}%
-\AgdaBound{un₂}\AgdaSymbol{)}\<%
 \end{code}
