--- a/paper/main.tex
+++ b/paper/main.tex
@@ -22,8 +22,6 @@
 \newunicodechar{𝟙}{\ensuremath{\One}}
 \newunicodechar{⊥}{\ensuremath{\Bot}}
 \newunicodechar{⊤}{\ensuremath{\Top}}
-\newunicodechar{¡}{\ensuremath{\OfCourse}}
-\newunicodechar{¿}{\ensuremath{\WhyNot}}
 \newunicodechar{⊕}{\ensuremath{\Plus}}
 \newunicodechar{⊗}{\ensuremath{\Ten}}
 \newunicodechar{⅋}{\ensuremath{\Par}}
@@ -35,6 +33,7 @@
 \newunicodechar{₂}{\ensuremath{_2}}
 \newunicodechar{₃}{\ensuremath{_3}}
 \newunicodechar{↝}{\ensuremath\red}
+\newunicodechar{↭}{\ensuremath\leftrightsquigarrow}
 \newunicodechar{⇒}{\ensuremath\reds}
 \newunicodechar{≃}{\ensuremath\simeq}
 \newunicodechar{Γ}{\ensuremath\ContextC}
