--- a/paper/main.bib
+++ b/paper/main.bib
@@ -617,6 +617,20 @@
   doi       = {10.1145/3329125},
 }
 
+@inproceedings{McBride18,
+  author       = {Conor McBride},
+  editor       = {Robert Atkey and
+                  Sam Lindley},
+  title        = {Everybody's Got To Be Somewhere},
+  booktitle    = {Proceedings of the 7th Workshop on Mathematically Structured Functional
+                  Programming, MSFP@FSCD 2018, Oxford, UK, 8th July 2018},
+  series       = {{EPTCS}},
+  volume       = {275},
+  pages        = {53--69},
+  year         = {2018},
+  doi          = {10.4204/EPTCS.275.6},
+}
+
 @inproceedings{RouvoetPoulsenKrebbersVisser20,
   author       = {Arjen Rouvoet and
                   Casper Bach Poulsen and
